--- a/Intro to HLS/README
+++ b/Intro to HLS/README
@@ -1,1 +1,1 @@
-
+This folder is just going to contain some of the C code that I've synthesized using the Vivado HLS. The block design and peripherels aren't included.
